# django_custom_authentication

./: README.md  pyproject.toml
tests/: test_django_custom_authentication.py
